Sun Dec 14 11:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* play.c: Sort out "stop" button for "end game" and gnubg vs gnubg.

Fri Dec 12 22:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* play.c: Add warning when end game clicked.

Fri Dec 12 14:57:42 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c: remove deprecate gtk_drawing_area_size
Fri Dec 12 14:05:30 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtk-multiview.c, gtk-multiview.h, gtkboard.c, gtkboard.h: remove the
	deprecated use of GtkType

Thu Dec 11 23:11:16 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, gnubgstock.c, gnubgstock.h, gtkgame.c,
	gtktoolbar.c, play.c, set.c: minor changes to the end-game button.

Tue Dec  9 16:59:54 CET 2008 Christian Anthon <anthon@kiku.dk>

	* import.c: do not try to import failed formats
	* gtkfile.c: output not recognized format in batch analyse, when
	appropriate. Do not try to set non-valid files and directories in the
	file selection dialog (Savannah bug).

Tue Dec  9 14:03:52 CET 2008 Christian Anthon <anthon@kiku.dk>

	* analysis.c: fix a bug causing wrong luck stats in matches as reported on savannah 

Tue Dec  9 01:32:30 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, sound.c: missing frees

Mon Dec  8 22:22:19 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, gnubgstock.c, gnubgstock.h, gtkgame.c,
	gtktoolbar.c, play.c, pixmaps/Makefile.am,
	pixmaps/gnubg-stock-pixbufs.h, pixmaps/16x16/actions/runit_16.png,
	pixmaps/24x24/actions/runit_24.png: Add a quickgame button

Mon Dec  8 21:29:12 CET 2008 Christian Anthon <anthon@kiku.dk>: 

	* gtkgame.c: UserCommand("set ..."); may have strange sideeffects
	through GTKSet, and cannot be used in edit_new

Dec  5 10:30:38 CET 2008 Christian Anthon <anthon@kiku.dk>: 

	* bearoff.c, bearoff.h: disable gmappedfile code when glib is old, and
	fix a bug causing a crash when mapping of the bearoffdb fails.
